# raytracer

./: .gitignore  Makefile.in  ReadMe.txt  configure  configure.ac  hmq_test.sln  hmq_test.vcxproj  hmq_test.vcxproj.filters  raytracer.sln  raytracer.vcxproj
models/: happy_rot_res3.ply  happy_rot_res4.ply
output/: expected_result.tga  result.tga
src/: Barycentric.cpp  Barycentric.h  BoundingBox.cpp  BoundingBox.h  CPool.h  Collision.h  Config.h  Face.h  IModelSpace.h  Main.cpp  Makefile.am  Makefile.in  MathUtil.h  PixBuffer.cpp  PixBuffer.h  Profiler.h  Ray.h  Renderer.cpp  Renderer.h  Utils.h  Vector.h  Vertex.h  main.cpp  pixbuffer.h  ply_reader.cpp  ply_reader.h  profiler.h  readme.txt  sample_render.tga  tga_saver.cpp  tga_saver.h  utils.h  vector.h
src/model_spaces/: AvgNormalCalculator.cpp  AvgNormalCalculator.h  BruteForce.cpp  BruteForce.h  IModelSpace.h  KDTree.cpp  KDTree.h  KDTreeSpace.cpp  KDTreeSpace.h  MathUtil.h
src/shapes/: Ray.h  Shapes.h  Triangle.h
src/test/: TestCase.h  TestOutput.cpp  TestOutput.h
