bin_PROGRAMS=raytracer
raytracer_SOURCES=Barycentric.cpp BoundingBox.cpp Main.cpp PixBuffer.cpp ply_reader.cpp Renderer.cpp tga_saver.cpp model_spaces/AvgNormalCalculator.cpp model_spaces/BruteForce.cpp model_spaces/KDTree.cpp model_spaces/KDTreeSpace.cpp test/TestOutput.cpp
raytracer_CXXFLAGS=-pipe -std=c++0x

